--- a/src/app/components/admin/release/release.component.scss
+++ b/src/app/components/admin/release/release.component.scss
@@ -87,6 +87,13 @@ h3,
 .file-label {
   flex-grow: 1;
   overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  max-width: 150px;
+
+  @media (min-width: 1680px) {
+    max-width: 350px;
+  }
 }
 
 .btn.dropdown-toggle {
@@ -178,4 +185,26 @@ h3,
 .chip-info {
   font-size: 8px;
   cursor: pointer;
+}
+
+.description-col {
+  word-break: break-word !important;
+  overflow-wrap: anywhere !important;
+  white-space: normal !important;
+  max-width: 800px;
+  min-width: 550px;
+
+  * {
+    word-break: break-word !important;
+    overflow-wrap: anywhere !important;
+    white-space: normal !important;
+  }
+}
+
+.table {
+  font-size: 13px;
+  
+  th, td {
+    vertical-align: middle;
+  }
 }
