--- a/src/app/components/common/dashboard/dashboard.component.scss
+++ b/src/app/components/common/dashboard/dashboard.component.scss
@@ -6,7 +6,7 @@
     bottom: 0;
     left: 0;
     z-index: 1000;
-    width: 260px;
+    width: 250px;
     display: block;
     overflow-x: hidden;
     overflow-y: auto;
