--- a/src/app/components/common/side-nav/side-nav.component.scss
+++ b/src/app/components/common/side-nav/side-nav.component.scss
@@ -1,6 +1,6 @@
 /* Sidebar container */
 .sidebar {
-    width: 230px;
+    width: 100%;
     background-color: #333333; /* Default background color */
     transition: background-color 0.3s ease, color 0.3s ease;
 }
@@ -14,13 +14,13 @@
 
 /* Sidebar list item styles */
 .sidebar li {
-        padding: 0px 6px;
+    padding: 0;
     color: #ffffff; /* Default text color */
     background-color: #333333; /* Default background color */
     cursor: pointer;
     transition: background-color 0.3s ease, color 0.3s ease;
-    margin-left: -5px;
-    width: 300px;
+    margin: 0;
+    width: 100%;
 }
 
 /* Hover effect - change background to white and text to blue */
@@ -77,7 +77,7 @@
 .sidebar li.selected a {
     background-color: #2481a6; /* Blue background for selected item */
     color: #ffffff; /* White text color for selected item */
-    width: 300px;
+    width: 100%;
 }
 
 /* Other item styles */
@@ -86,7 +86,8 @@
     color: #ffffff; /* Default text color */
     padding: 10px 15px;
     text-decoration: none;
-    width: 300px;
+    width: 100%;
+    white-space: nowrap;
 }
 
 .sidebar li a:hover {
